[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/world/levels/Level_017.gd" type="Script" id=1]
[ext_resource path="res://src/world/Circle.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/world/obstacles/Wall_2.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/world/obstacles/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/world/obstacles/RotatableTriangle.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/world/obstacles/Beam.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/world/obstacles/Wall_0.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/world/obstacles/Wall_Wide_0.tscn" type="PackedScene" id=8]

[node name="Level" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )

[node name="Circles" type="Node2D" parent="."]

[node name="Circle" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 155.423, 153.576 )
color_type = 2
angle = 210
size = 10.0

[node name="Circle2" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 1456.75, 323.274 )
color_type = 1
angle = 90
size = 18.0

[node name="Circle3" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 1277.65, 858.379 )
angle = 110
size = 24.0

[node name="Circle7" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 281.087, 734.157 )
angle = 110

[node name="Circle4" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 1718.88, 456.381 )
color_type = 2
angle = 30
size = 24.0

[node name="Circle5" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 618.483, 193.194 )
angle = 240
size = 15.0

[node name="Circle6" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 1568.68, 760.431 )
color_type = 1

[node name="Circle8" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 404.116, 950.068 )
color_type = 2
angle = -20
size = 19.0

[node name="Circle9" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 838.429, 635.189 )
color_type = 1

[node name="Circle10" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 413.41, 369.783 )
color_type = 3
angle = 210
size = 10.0

[node name="Circle11" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 1460.16, 928.775 )
color_type = 3
angle = 185
size = 8.0

[node name="Circle12" parent="Circles" instance=ExtResource( 2 )]
position = Vector2( 494.189, 685.118 )
color_type = 3

[node name="Statics" type="Node2D" parent="."]

[node name="Beams" type="Node2D" parent="Statics"]

[node name="Beam" parent="Statics/Beams" instance=ExtResource( 6 )]
position = Vector2( 960, 540 )
scale = Vector2( 2.821, 1.523 )
color_type = 1

[node name="Rotatables" type="Node2D" parent="Statics"]

[node name="RotatableTriangle" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 1776.5, 685.497 )
rotation = 1.5708
angles = PoolIntArray( 180, 90 )

[node name="RotatableTriangle2" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 143.277, 685.497 )
angles = PoolIntArray( 0, -90 )

[node name="RotatableTriangle3" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 143.442, 398.756 )
rotation = -1.5708
angles = PoolIntArray( 0, -90 )

[node name="RotatableTriangle4" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 1776.41, 398.756 )
rotation = 3.14159
angles = PoolIntArray( 180, 90 )

[node name="Wall4" parent="Statics" instance=ExtResource( 8 )]
position = Vector2( 960, 999.66 )
rotation = 1.5708

[node name="Wall9" parent="Statics" instance=ExtResource( 8 )]
position = Vector2( 960, 1160 )
rotation = 1.5708

[node name="Wall5" parent="Statics" instance=ExtResource( 8 )]
position = Vector2( 960, 79.931 )
rotation = 1.5708

[node name="Wall8" parent="Statics" instance=ExtResource( 8 )]
position = Vector2( 960, -80 )
rotation = 1.5708

[node name="Button" parent="Statics" instance=ExtResource( 4 )]
position = Vector2( 960, 999.66 )

[node name="Button2" parent="Statics" instance=ExtResource( 4 )]
position = Vector2( 960, 79.931 )

[node name="Wall6" parent="Statics" instance=ExtResource( 3 )]
position = Vector2( 960, 540 )
rotation = 1.5708
scale = Vector2( 1, 0.898 )

[node name="Wall" parent="Statics" instance=ExtResource( 7 )]
position = Vector2( 585, 79.931 )
rotation = 1.5708
scale = Vector2( 1, 0.5 )

[node name="Wall3" parent="Statics" instance=ExtResource( 7 )]
position = Vector2( 1335, 79.931 )
rotation = 1.5708
scale = Vector2( 1, 0.5 )

[node name="Wall2" parent="Statics" instance=ExtResource( 7 )]
position = Vector2( 585, 999.66 )
rotation = 1.5708
scale = Vector2( 1, 0.5 )

[node name="Wall7" parent="Statics" instance=ExtResource( 7 )]
position = Vector2( 1335, 999.66 )
rotation = 1.5708
scale = Vector2( 1, 0.5 )
